--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "googleapis": "^170.1.0",
     "lucide-react": "^0.395.0",
     "next": "^14.2.5",
+    "openai": "^6.17.0",
     "papaparse": "^5.4.1",
     "pocketbase": "^0.25.0",
     "react": "^18.3.1",
