Add OpenAI and Firecrawl API keys to .env.example for configuration

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,11 @@ NEXT_PUBLIC_POCKETBASE_URL=http://localhost:8090
 RESEND_API_KEY=re_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 RESEND_WEBHOOK_SECRET=whsec_xxxxxxxxxxxxxxxxxxxxxx
 
+# OpenAI (for AI scoring and opener generation)
+OPENAI_API_KEY=sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
+# Firecrawl (for website scraping)
+FIRECRAWL_API_KEY=fc-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
 # App Configuration
 NEXT_PUBLIC_APP_URL=http://localhost:3000
