feat: Implement follow-up scheduling and inbox processing features
- Added a migration script to introduce follow-up scheduling, email threading, and inbox message processing.
- Updated .env.example with new environment variables for Google OAuth and Gmail Pub/Sub.
- Enhanced AdminSettingsPage to manage Gmail watch status and notifications.
- Introduced FollowUpPage for managing follow-up emails within campaigns.
- Implemented API routes for Gmail watch management and webhook handling for incoming emails.
- Updated email sending logic to support threading for follow-up emails.

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,33 @@
 # PocketBase Configuration
 NEXT_PUBLIC_POCKETBASE_URL=http://localhost:8090
+POCKETBASE_ADMIN_EMAIL=admin@example.com
+POCKETBASE_ADMIN_PASSWORD=your_admin_password
 
 # Resend Email Service
 RESEND_API_KEY=re_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 RESEND_WEBHOOK_SECRET=whsec_xxxxxxxxxxxxxxxxxxxxxx
 
-# OpenAI (for AI scoring and opener generation)
+# OpenAI (for AI scoring, opener generation, and inbox agent)
 OPENAI_API_KEY=sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 # Firecrawl (for website scraping)
 FIRECRAWL_API_KEY=fc-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
+# Google OAuth (for Gmail sending and inbox reading)
+GOOGLE_CLIENT_ID=your_google_client_id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+
+# Gmail Pub/Sub (for real-time inbox processing)
+# Create a topic in Google Cloud Console and grant publish access to:
+# gmail-api-push@system.gserviceaccount.com
+GOOGLE_PUBSUB_TOPIC=projects/your-project-id/topics/gmail-inbox
+
+# Notification Settings (inbox agent sends action summaries here via Resend)
+NOTIFICATION_EMAIL=you@yourdomain.com
+NOTIFICATION_FROM_EMAIL=CRM Agent <agent@yourdomain.com>
+
+# Cron Security (protect /api/cron/follow-ups endpoint)
+CRON_SECRET=your_random_secret_here
 
 # App Configuration
 NEXT_PUBLIC_APP_URL=http://localhost:3000
